--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <h3>Column 1</h3>
+          <h3></h3>
           <div class="card" style="width: 300px">
             <img
               class="card-img-top"
@@ -90,13 +90,13 @@
             />
             <div class="card-body">
               <h4 class="card-title">Getting Started</h4>
-              <p class="card-text">Some example text.</p>
-              <a href="#" class="btn btn-primary">See Profile</a>
+              <p class="card-text">Propagate and germinate.</p>
+              <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
             </div>
           </div>
         </div>
         <div class="col-sm-4">
-          <h3>Column 2</h3>
+          <h3></h3>
           <div class="card" style="width: 300px">
             <img
               class="card-img-top"
@@ -105,13 +105,13 @@
             />
             <div class="card-body">
               <h4 class="card-title">Plant Care</h4>
-              <p class="card-text">Some example text.</p>
-              <a href="#" class="btn btn-primary">See Profile</a>
+              <p class="card-text">Keep your plants healthy.</p>
+              <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
             </div>
           </div>
         </div>
         <div class="col-sm-4">
-          <h3>Column 3</h3>
+          <h3></h3>
           <div class="card" style="width: 300px">
             <img
               class="card-img-top"
@@ -120,8 +120,8 @@
             />
             <div class="card-body">
               <h4 class="card-title">Home Decor</h4>
-              <p class="card-text">Some example text.</p>
-              <a href="#" class="btn btn-primary">See Profile</a>
+              <p class="card-text">Spruce up you space.</p>
+              <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
             </div>
           </div>
         </div>
