--- a/index3.html
+++ b/index3.html
@@ -23,7 +23,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <link href="styles/style.css" rel="stylesheet" type="text/css" />
+    <link href="styles/style3.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -49,7 +49,7 @@
         </ul>
       </div>
       <div class="mx-auto order-0">
-        <a class="navbar-brand mx-auto" href="#"
+        <a class="navbar-brand mx-auto" href="../bootstrapHW//index.html"
           ><svg
             xmlns="http://www.w3.org/2000/svg"
             width="24"
@@ -90,59 +90,16 @@
 
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="maintitle">My First Plant Blog</h1>
-        <p class="maintitle">One of my many covid hobbies</p>
+        <h1 class="maintitle">Plant Care </h1>
+        <p class="maintitle">Keep your plants healthy.</p>
       </div>
     </div>
 
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-4">
-          <h3></h3>
-          <div class="card" style="width: 300px">
-            <img
-              class="card-img-top"
-              src="images/sprout.jpg"
-              alt="Card image"
-            />
-            <div class="card-body">
-              <h4 class="card-title">Getting Started</h4>
-              <p class="card-text">Propagate and germinate.</p>
-              <a href="../index2.html" class="btn-primary stretched-link"></a>
-              <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
+    
             </div>
           </div>
         </div>
-        <div class="col-sm-4">
-          <h3></h3>
-          <div class="card" style="width: 300px">
-            <img
-              class="card-img-top"
-              src="images/watermelon.jpg"
-              alt="Card image"
-            />
-            <div class="card-body">
-              <h4 class="card-title">Plant Care</h4>
-              <p class="card-text">Keep your plants healthy.</p>
-              <a href="../index3.html" class="btn-primary stretched-link"></a>
-              <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <h3></h3>
-          <div class="card" style="width: 300px">
-            <img
-              class="card-img-top"
-              src="images/hangplant.jpg"
-              alt="Card image"
-            />
-            <div class="card-body">
-              <h4 class="card-title">Home Decor</h4>
-              <p class="card-text">Spruce up your space.</p>
-              <a href="../index4.html" class="btn-primary stretched-link"></a>
-              <!-- <a href="#" class="btn btn-primary">See Profile</a> -->
-            </div>
+        
           </div>
         </div>
       </div>
