--- a/indexx.html
+++ b/indexx.html
@@ -23,7 +23,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-    <link href="styles/style2.css" rel="stylesheet" type="text/css" />
+    <link href="styles/stylee.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark">
